# wisp

./: .envrc  .envrc.local.example  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  DESIGN.md  PLAN.md  README.md  TODO.md  eslint.config.js  flake.nix  justfile  package.json  svelte.config.js  tsconfig.json  vite.config.ts  win.ps1
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
signing/: metadata.json  sign.ps1
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  commands.rs  engine.rs  history.rs  hotkey.rs  lib.rs  output.rs  overlay.rs  state.rs  tray.rs  whisper.rs
src-tauri/src/audio/: decode.rs  devices.rs  mod.rs  recorder.rs  resample.rs
src-tauri/src/hotkey/: convert.rs  keys.rs  listener.rs  mod.rs  windows.rs
src-tauri/src/settings/: migrate.rs  mod.rs  state.rs  types.rs
src-tauri/src/whisper/: engine.rs  mod.rs  models.rs  worker.rs
src/lib/: bindings.ts  keys.ts  log.ts  overlay-stack.svelte.ts  overlay.svelte.ts  state.svelte.ts  tauri.ts
src/lib/components/: hotkey-capture.svelte  model-section.svelte  nav-sidebar.svelte  overlay-pill.svelte  setting-row.svelte  settings-about.svelte  settings-advanced.svelte  settings-main.svelte  settings-overlay.svelte  titlebar.svelte
src/lib/components/overlay/: pill.svelte
src/lib/components/settings/: about.svelte  general.svelte  history.svelte  model-section.svelte  model.svelte  overlay.svelte  setting-row.svelte  titlebar.svelte  transcribe.svelte
src/lib/components/tabs/: about.svelte  general.svelte  history.svelte  model.svelte  overlay.svelte  transcribe.svelte
src/lib/components/ui/button/: button.svelte
src/lib/components/ui/context-menu/: context-menu-checkbox-item.svelte  context-menu-content.svelte  context-menu-item.svelte  context-menu-radio-item.svelte  context-menu-sub-content.svelte
src/lib/components/ui/drawer/: drawer-content.svelte
src/lib/components/ui/hover-card/: hover-card-content.svelte
src/lib/components/ui/input-otp/: input-otp-group.svelte  input-otp-slot.svelte
src/lib/components/ui/kbd/: kbd.svelte
src/lib/components/ui/menubar/: menubar-checkbox-item.svelte  menubar-item.svelte  menubar-radio-item.svelte  menubar-sub-content.svelte  menubar-sub-trigger.svelte  menubar-trigger.svelte  menubar.svelte
src/lib/components/ui/native-select/: native-select.svelte
src/lib/components/ui/navigation-menu/: navigation-menu-content.svelte  navigation-menu-trigger.svelte  navigation-menu-viewport.svelte
src/lib/components/ui/range-calendar/: range-calendar.svelte
src/lib/components/ui/setting-switch/: index.ts  setting-switch.svelte
src/lib/components/ui/sheet/: sheet-content.svelte
src/lib/components/ui/sidebar/: sidebar-menu-badge.svelte  sidebar-menu-sub.svelte  sidebar.svelte
src/lib/components/ui/tabs/: tabs-trigger.svelte
src/lib/components/ui/toggle-group/: toggle-group-item.svelte
src/lib/components/views/: about.svelte  general.svelte  history.svelte  index.ts  model.svelte  overlay.svelte  transcribe.svelte
src/routes/: +layout.svelte  +page.svelte  layout.css
src/routes/overlay/: +error.svelte  +layout.svelte  +page.svelte
tooling/: default.nix  devenv.nix  macos.nix
tooling/windows/: _env.ps1  build-debug.ps1  build-sign-debug.ps1  build-sign.ps1  build.ps1  check.ps1  clean.ps1  dev.ps1  format.ps1  install.ps1  sign.ps1
tools/: package.nix  prek.toml  shell.nix  web.nix
tools/win/: install.ps1  metadata.json  sign.ps1
web/: App.svelte  app.css  index.html  vite.config.ts
