[package]
name = "wisp"
version = "0.1.0"
description = "Push-to-talk whisper dictation"
authors = ["Joseph Embrey"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
# Tauri
tauri = { version = "2.10", features = ["tray-icon"] }
tauri-plugin-log = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"

# Audio capture
cpal = "0.17"

# Speech-to-text
whisper-rs = "0.15"

# Global hotkey (press + release)
rdev = "0.5"

# Clipboard
arboard = "3"

# Type text at cursor
enigo = "0.6"

# Model downloads
reqwest = { version = "0.13", features = ["stream"] }
futures-util = "0.3"

# Regex (lightweight, no-std)
regex-lite = "0.1"

# Concurrency
parking_lot = "0.12"
