[package]
name = "wisp"
version = "0.1.0"
description = "Push-to-talk whisper dictation"
authors = ["Joseph Embrey"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"
default-run = "wisp"

[features]
verbose-log = []

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
# Tauri
tauri = { version = "2.10", features = ["tray-icon", "specta"] }
tauri-plugin-log = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"

# Audio capture
cpal = "0.17"

# Speech-to-text
whisper-rs = "0.15"

# Global hotkey (press + release)
tauri-plugin-global-shortcut = "2"

# Clipboard
arboard = "3"

# Type text at cursor
enigo = "0.6"

# Model downloads
reqwest = { version = "0.13", features = ["stream"] }
futures-util = "0.3"

# Regex (lightweight, no-std)
regex-lite = "0.1"

# Type-safe IPC bindings
specta = { version = "=2.0.0-rc.22", features = ["derive"] }
specta-typescript = "0.0.9"
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }

# Concurrency
parking_lot = "0.12"
tauri-plugin-single-instance = "2.4.0"

[target.'cfg(target_os = "macos")'.dependencies]
whisper-rs = { version = "0.15", features = ["metal"] }

[target.'cfg(target_os = "linux")'.dependencies]
whisper-rs = { version = "0.15", features = ["vulkan"] }

[target.'cfg(target_os = "windows")'.dependencies]
whisper-rs = { version = "0.15", features = ["vulkan"] }
windows-sys = "0.59"
