[package]
name = "wisp"
version = "0.1.0"
description = "Push-to-talk whisper dictation"
authors = ["Joseph Embrey"]
license = "GPL-3.0-or-later"
repository = "https://github.com/josephembrey/wisp"
edition = "2021"
rust-version = "1.77.2"
default-run = "wisp"

[features]
verbose-log = []

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
# Tauri
tauri = { version = "2.10", features = ["tray-icon", "specta", "macos-private-api"] }
tauri-plugin-log = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"

# Audio capture
cpal = "0.17"

# Audio file decoding
symphonia = { version = "0.5", features = ["mp3", "aac", "flac", "ogg", "wav", "pcm", "isomp4", "mkv", "vorbis"] }

# Speech-to-text
whisper-rs = "0.16"

# Global hotkey (press + release)
tauri-plugin-global-shortcut = "2"

# Clipboard
arboard = "3"

# Type text at cursor
enigo = "0.6"

# Model downloads
reqwest = { version = "0.13", features = ["stream", "json"] }
futures-util = "0.3"

# Regex (lightweight, no-std)
regex-lite = "0.1"

# Type-safe IPC bindings
specta = { version = "=2.0.0-rc.22", features = ["derive"] }
specta-typescript = "0.0.9"
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }

# File dialog
tauri-plugin-dialog = "2"

# Autostart & window state
tauri-plugin-autostart = "2"
tauri-plugin-window-state = "2"

# Open files/dirs in native explorer
open = "5"

# System info
sysinfo = "0.38.4"

# Concurrency
parking_lot = "0.12"
tauri-plugin-single-instance = "2.4.0"

[target.'cfg(target_os = "macos")'.dependencies]
whisper-rs = { version = "0.16", features = ["metal"] }

[target.'cfg(target_os = "linux")'.dependencies]
whisper-rs = { version = "0.16", features = ["vulkan"] }

[target.'cfg(target_os = "windows")'.dependencies]
whisper-rs = { version = "0.16", features = ["vulkan"] }
windows-sys = { version = "0.61.2", features = ["Win32_UI_Input_KeyboardAndMouse"] }
windows = { version = "0.62.2", features = ["Win32_Graphics_Dxgi"] }
